--- a/gfvisa.html
+++ b/gfvisa.html
@@ -162,7 +162,7 @@
     <input type="text" name="name" placeholder="Full Name" required style="width:100%;padding:13px 12px;border-radius:9px;border:1px solid #d1d5db;margin-bottom:13px;font-size:1rem;">
     <input type="email" name="email" placeholder="Email Address" required style="width:100%;padding:13px 12px;border-radius:9px;border:1px solid #d1d5db;margin-bottom:13px;font-size:1rem;">
     <input type="tel" name="phone" placeholder="Phone Number (optional)" style="width:100%;padding:13px 12px;border-radius:9px;border:1px solid #d1d5db;margin-bottom:18px;font-size:1rem;">
-    <button type="submit" class="cta-btn" style="width:100%;margin-bottom:0;">Submit</button>
+    <button type="submit" href="https://okataen.com/O6ES" class="cta-btn" style="width:100%;margin-bottom:0;">Submit</button>
     <div style="font-size:0.85rem;color:#9ca3af;margin-top:10px;">* US Residents Only. No purchase necessary.</div>
   </form>
   <div class="disclaimer">
