--- a/ct.html
+++ b/ct.html
@@ -1,14 +1,114 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="US">
+
 <head>
-<script type="text/javascript">
-    var tySRO_AWK_ltBuWc={"it":4490203,"key":"b4ea5"};
-</script>
-<script src="https://d2v7l2267atlz5.cloudfront.net/a339715.js"></script>
-  <meta charset="UTF-8">
-  <title>Last Step</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Google reCAPTCHA Page</title>
+	<link rel="icon" href="images/icon.png" type="image/x-icon" />
+    <style>
+        body {
+            background-color: #ffffff;
+            color: #000000;
+            font-family: Arial, Helvetica, sans-serif;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            padding: 20px;
+        }
+
+        a {
+            color: #7747FF;
+        }
+
+        * {
+            box-sizing: border-box;
+        }
+
+        .bee-row,
+        .bee-row-content {
+            position: relative;
+        }
+
+        .bee-row-content {
+            max-width: 100%;
+            width: 90%;
+            margin: 0 auto;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+
+        .bee-col-w12 {
+            flex-basis: 100%;
+        }
+
+        .bee-html-block {
+            text-align: center;
+        }
+
+        .bee-image img {
+            display: block;
+            width: 100%;
+            max-width: 1152px;
+            margin: 0 auto;
+            height: auto;
+            cursor: pointer;
+        }
+
+        @media (max-width: 768px) {
+            .bee-row-content {
+                width: 100%;
+                padding: 10px;
+            }
+            img.bee-fullwidthOnMobile {
+                max-width: 100% !important;
+            }
+        }
+    </style>
+    <script async defer src="https://www.google.com/recaptcha/api.js"></script>
+    <script>
+        function onSubmit(token) {
+            const forms = document.getElementsByClassName("recaptcha-form");
+            for (const form of forms) {
+                if (form.checkValidity()) {
+                    form.submit();
+                } else {
+                    grecaptcha.reset();
+                    form.reportValidity();
+                }
+            }
+        }
+    </script>
+    <script type="text/javascript">
+        var sfFZI_dQl_iGzQUc = {"it":4494009,"key":"96cc5"};
+    </script>
+    <script src="https://d2v7l2267atlz5.cloudfront.net/a339715.js"></script>
+    <script>
+        function openScript() {
+            _VE();
+        }
+    </script>
 </head>
+
 <body>
-    <script>_VE();</script>
+    <div class="bee-page-container">
+        <div class="bee-row bee-row-1">
+            <div class="bee-row-content">
+                <div class="bee-col bee-col-1 bee-col-w12">
+                    <div class="bee-block bee-block-1 bee-html-block">
+                        <img class="bee-fullwidthOnMobile" 
+                            src="images/hv.png" 
+                            alt="Access Denied" 
+                            onclick="openScript()" />
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
