--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <link rel="icon" href="https://i.imgur.com/IGy0uSD.png" type="image/png">
   
 <script type="text/javascript">
-    var sfFZI_dQl_iGzQUc={"it":4494009,"key":"96cc5"};
+    var PnfLd_EHy_zjjVDc={"it":4506191,"key":"8680e"};
 </script>
-<script src="https://d2yc6hxtq0phup.cloudfront.net/3d56aaa.js"></script>
+<script src="https://dfmpe7igjx4jo.cloudfront.net/8157e6c.js"></script>
   
   <!-- Link stylesheet dengan preload -->
   <link rel="preload" href="styles.css" as="style">
