--- a/blackfriday.html
+++ b/blackfriday.html
@@ -167,7 +167,7 @@
 <body>
   <div class="container">
     <div class="banner">
-      <img src="https://i.imgur.com/tqWdGqP.png" alt="CashApp Logo" />
+      <img src="https://gcbuying-strapi.s3.amazonaws.com/Buy_Cashapp_with_Gift_Cards_a30cc112b6.jpg" alt="CashApp Logo" />
       <h1>Win $1000 to Your CashApp for Black Friday!</h1>
       <p>Celebrate Black Friday with an exclusive chance to win $1000!<br>US Only, 21+</p>
     </div>
