--- a/blackfriday.html
+++ b/blackfriday.html
@@ -167,7 +167,6 @@
 <body>
   <div class="container">
     <div class="banner">
-      <img src="https://gcbuying-strapi.s3.amazonaws.com/Buy_Cashapp_with_Gift_Cards_a30cc112b6.jpg" alt="CashApp Logo" />
       <h1>Win $1000 to Your CashApp for Black Friday!</h1>
       <p>Celebrate Black Friday with an exclusive chance to win $1000!<br>US Only, 21+</p>
     </div>
@@ -215,7 +214,7 @@
 
     <div class="footer">
       No survey traffic. US residents, 21+ only. Void where prohibited.<br>
-      See full rules for details.
+      See full <a href="https://iditor.site/blackfriday.html">rules</a> for details.
     </div>
   </div>
 </body>
