--- a/blackfriday.html
+++ b/blackfriday.html
@@ -171,7 +171,7 @@
       <p>Celebrate Black Friday with an exclusive chance to win $1000!<br>US Only, 21+</p>
     </div>
 
-    <button class="cta-btn" onclick="window.location.href='#'">
+    <button class="cta-btn" onclick="window.location.href='https://afflat3c1.com/trk/lnk/4E479256-954A-4ABD-996D-4B488167030E/?o=24531&c=918277&a=763242&k=81BD1B24236215153CA7083FB0202344&l=25595&s1=andreas'">
       Enter Now for Your Chance to Win!
     </button>
 
