--- a/samsung1.html
+++ b/samsung1.html
@@ -138,7 +138,7 @@
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSjXoitvDoEpFJ-qMqJEd4P5APHSCabg3BwKg&s" alt="Samsung Flip" class="flip-img">
     <h1>Win the <span style="color:var(--secondary);">Latest Samsung Flip</span>!</h1>
     <p>Don't miss your chance to own the revolutionary Samsung Flip. Enter now for this exclusive CPA offer – for US residents only!</p>
-    <a href="https://aff4jobs.com/go?c=5666&p=29654" class="cta-btn">Claim Your Samsung Flip</a>
+    <a href="https://okataen.com/HPpS" class="cta-btn">Claim Your Samsung Flip</a>
     <div class="secure-badge">
       <svg fill="none" viewBox="0 0 24 24"><path fill="currentColor" d="M12 2a7 7 0 0 1 7 7v2.4c0 1.88.66 3.68 1.87 5.1a2.69 2.69 0 0 1-2.15 4.48H5.28a2.69 2.69 0 0 1-2.15-4.48A9.11 9.11 0 0 0 5 11.4V9a7 7 0 0 1 7-7Zm0 2a5 5 0 0 0-5 5v2.4a11.13 11.13 0 0 1-2.09 6.43.69.69 0 0 0 .54 1.17h14.44a.69.69 0 0 0 .54-1.17A11.14 11.14 0 0 1 17 9V7a5 5 0 0 0-5-5Z"/></svg>
       100% Secure & Private
