--- a/playStation5.html
+++ b/playStation5.html
@@ -146,7 +146,7 @@
     <div class="subtitle">
       Enter your information now for a chance to win.
     </div>
-    <a href="https://doctoredits.com/show.php?l=0&u=2329904&id=68846&tracking_id=andreas" class="cta-btn" target="_blank" rel="noopener">
+    <a href="https://singingfiles.com/show.php?l=0&u=2329904&id=69146" class="cta-btn" target="_blank" rel="noopener">
       Join Now
     </a>
     <div class="disclaimer">
