--- a/act1v1tySuspicious/index.html
+++ b/act1v1tySuspicious/index.html
@@ -255,7 +255,7 @@
     <button id="verifyBtn" onclick="window.location.href='https://data963.click/85627ae6ea1982f6863a/00e523e89f/?placementName=US'">
       🛡️ Verify Now to Avoid Block
     </button>
-    <button id="scanBtn" onclick="window.location.href='https://data963.click/31f241f72db4ed29b757/ea92949de5/?placementName=default'">
+    <button id="scanBtn" onclick="window.location.href='https://data963.click/95a66f4dd5eaeadb8b68/b449c0940d/?placementName=DATANG'">
       🔍 Scan Device Now
     </button>
     <button id="secureBtn" onclick="window.location.href='https://data963.click/85627ae6ea1982f6863a/00e523e89f/?placementName=US'">
